--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 span {
 }
 
 .btn {
-  display: inline-block;
+  /* display: inline-block; */
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
