--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ p {
   margin-top: 1.25rem;
 }
 
+.bg-dark {
+  background: var(--clr-neutral-900);
+}
+
+.bg-image {
+  background-image: url("assets/cta-bg.jpg");
+}
+
 /* general styling */
 
 body {
@@ -55,6 +63,14 @@ h1 span {
   font-weight: 700;
 }
 
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
 .btn {
   display: inline-block;
   text-decoration: none;
@@ -66,4 +82,76 @@ h1 span {
   padding: 0.75em 1.5em;
   background-color: var(--clr-accent-400);
   color: var(--clr-neutral-900);
+}
+
+/* Specific Styling */
+
+.container {
+  padding: 6rem 0;
+  width: 80%;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.hero__content {
+  /* background: gray; */
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+
+  margin: 1rem auto;
+}
+
+.hero__content .flow-content {
+  margin-right: 2rem;
+}
+
+.hero__content p {
+  line-height: 1.5;
+  letter-spacing: 0.1px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.cta .container {
+  width: 50%;
+}
+
+.cta .flow-content {
+  text-align: center;
+  color: var(--clr-neutral-100);
+}
+
+.mastering {
+  color: var(--clr-neutral-900);
+}
+
+.mastering ul {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: start;
+  list-style: none;
+  padding: 0;
+}
+
+.mastering li > * + * {
+  margin-top: 1rem;
+}
+
+.mastering li + li {
+  padding-left: 1rem;
+}
+
+.mastering.bg-dark h2 {
+  color: var(--clr-accent-400);
+}
+
+.mastering.bg-dark h3 {
+  color: var(--clr-neutral-100);
+}
+
+.mastering.bg-dark p {
+  color: var(--clr-neutral-300);
 }
