--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ img {
   margin: 0 auto;
 }
 
+.container--small {
+  max-width: 40rem;
+}
+
 .split {
   display: flex;
   flex-direction: column;
@@ -100,12 +104,27 @@ img {
 }
 
 .bg-dark {
+  --accent: var(--clr-accent-400);
   color: var(--clr-neutral-100);
-  background: var(--clr-neutral-900);
+  background: var(--blend, var(--clr-neutral-900));
+  background-blend-mode: multiply;
+}
+
+.bg-accent {
+  --fg: var(--clr-neutral-100);
+  --bg: var(--clr-accent-400);
+  --accent: var(--clr-neutral-900);
+  background: var(--blend, var(--clr-accent-400));
+  background-blend-mode: multiply;
+  color: var(--clr-neutral-900);
+}
+
+.bg-image {
+  background: var(--image);
 }
 
 .text-accent {
-  color: var(--clr-accent-400);
+  color: var(--accent);
 }
 
 /* general styling */
@@ -118,12 +137,28 @@ body {
   margin: 0;
 }
 
-h1 {
-  font-weight: 400;
+.section-title {
+  display: inline-block;
+  padding: 0.1em 0.5em;
+  font-size: var(--fs-300);
+  font-weight: var(--fw-700);
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  color: var(--fg, var(--clr-accent-400));
+  background: var(--clr-neutral-900);
 }
 
-h1 span {
+.section-header {
+  font-size: var(--fs-700);
+  font-weight: var(--fw-700);
+}
+
+.section-header span {
   font-weight: 700;
+}
+
+.section-content {
+  line-height: 2em;
 }
 
 a {
@@ -141,8 +176,43 @@ a {
   font-size: 1.125rem;
   color: inherit;
   padding: 0.75em 1.5em;
-  background-color: var(--clr-accent-400);
+  background-color: var(--fg, var(--clr-accent-400));
   color: var(--clr-neutral-900);
+}
+
+.testimonials {
+  text-align: center;
+}
+
+.testimonial {
+  text-align: left;
+  padding: 1.5em;
+}
+
+@media (min-width: 40em) {
+  .testimonial + .testimonial {
+    margin-left: 4rem;
+  }
+}
+
+.testimonial .section-content {
+  font-style: italic;
+}
+
+.testimonial::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  background-color: var(--accent);
+  z-index: -1;
+  transform: translate(-2em, -2em);
+}
+
+.name {
+  color: var(--accent);
+  font-weight: var(--fw-700);
 }
 
 /* navigation */
@@ -183,7 +253,7 @@ header {
 
 /* general layout */
 section {
-  padding: 4.125rem 0;
+  padding: 4.125rem 1em;
 }
 
 @media (min-width: 40em) {
@@ -194,14 +264,19 @@ section {
 
 /* individual sections */
 
-.hero img {
-  transform: translateY(2em);
-}
-
 @media (min-width: 40em) {
   .hero {
     padding: 0;
   }
+
+  .hero img {
+    transform: translate(1em, 2em);
+  }
+}
+
+.join-now li {
+  background: var(--clr-neutral-100);
+  color: var(--clr-neutral-900);
 }
 
 .join-now li::before {
@@ -209,14 +284,28 @@ section {
   display: block;
   width: 5rem;
   height: 5rem;
-  background: var(--clr-accent-400);
+  background: var(--accent, var(--clr-accent-400));
   position: absolute;
   z-index: -1;
   transform: translate(-0.5rem, -0.5rem);
 }
 
+/* Specific Styling */
+
+.hero .section-header {
+  font-weight: var(--fw-400);
+}
+
 .cta {
-  background-image: url(assets/cta-bg.jpg);
   background-size: cover;
   text-align: center;
+}
+
+.cta_1 {
+  --image: url(assets/cta-bg-1.jpg);
+  --blend: url(assets/cta-bg-1.jpg), var(--bg);
+}
+
+.cta_2 {
+  --image: url(assets/cta-bg-2.jpg);
 }
