--- a/style.css
+++ b/style.css
@@ -103,24 +103,22 @@ img {
   box-shadow: var(--box-shadow);
 }
 
-.bg-dark {
-  --accent: var(--clr-accent-400);
-  color: var(--clr-neutral-100);
-  background: var(--blend, var(--clr-neutral-900));
+[class*="bg-"] {
+  color: var(--fg, var(--clr-neutral-900));
+  background: var(--blend, var(--image, var(--bg, var(--clr-neutral-100))));
   background-blend-mode: multiply;
+}
+
+.bg-dark {
+  --fg: var(--clr-neutral-100);
+  --bg: var(--clr-neutral-900);
+  --accent: var(--clr-accent-400);
 }
 
 .bg-accent {
-  --fg: var(--clr-neutral-100);
+  --fg: var(--clr-neutral-900);
   --bg: var(--clr-accent-400);
-  --accent: var(--clr-neutral-900);
-  background: var(--blend, var(--clr-accent-400));
-  background-blend-mode: multiply;
-  color: var(--clr-neutral-900);
-}
-
-.bg-image {
-  background: var(--image);
+  --neutral: var(--clr-neutral-100);
 }
 
 .text-accent {
@@ -144,7 +142,7 @@ body {
   font-weight: var(--fw-700);
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  color: var(--fg, var(--clr-accent-400));
+  color: var(--neutral, var(--clr-accent-400));
   background: var(--clr-neutral-900);
 }
 
@@ -176,7 +174,7 @@ a {
   font-size: 1.125rem;
   color: inherit;
   padding: 0.75em 1.5em;
-  background-color: var(--fg, var(--clr-accent-400));
+  background-color: var(--neutral, var(--clr-accent-400));
   color: var(--clr-neutral-900);
 }
 
@@ -205,13 +203,13 @@ a {
   position: absolute;
   width: 5rem;
   height: 5rem;
-  background-color: var(--accent);
+  background-color: var(--accent, var(--fg));
   z-index: -1;
   transform: translate(-2em, -2em);
 }
 
 .name {
-  color: var(--accent);
+  color: var(--accent, var(--fg));
   font-weight: var(--fw-700);
 }
 
@@ -284,7 +282,7 @@ section {
   display: block;
   width: 5rem;
   height: 5rem;
-  background: var(--accent, var(--clr-accent-400));
+  background: var(--bg, var(--clr-accent-400));
   position: absolute;
   z-index: -1;
   transform: translate(-0.5rem, -0.5rem);
@@ -302,7 +300,7 @@ section {
 }
 
 .cta_1 {
-  --image: url(assets/cta-bg-1.jpg);
+  /* --image: url(assets/cta-bg-1.jpg); */
   --blend: url(assets/cta-bg-1.jpg), var(--bg);
 }
 
