--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ img {
   }
 
   .split > * + * {
-    margin: 0 0 0 var(--spacer);
+    margin: 0 0 0 var(--gap, var(--spacer));
   }
 }
 
@@ -105,8 +105,7 @@ img {
 
 [class*="bg-"] {
   color: var(--fg, var(--clr-neutral-900));
-  background: var(--blend, var(--image, var(--bg, var(--clr-neutral-100))));
-  background-blend-mode: multiply;
+  background: var(--bg, var(--clr-neutral-100));
 }
 
 .bg-dark {
@@ -118,11 +117,17 @@ img {
 .bg-accent {
   --fg: var(--clr-neutral-900);
   --bg: var(--clr-accent-400);
-  --neutral: var(--clr-neutral-100);
+  --accent: var(--clr-neutral-100);
+}
+
+.bg-light {
+  --fg: var(--clr-neutral-900);
+  --bg: var(--clr-neutral-100);
+  --accent: var(--clr-accent-400);
 }
 
 .text-accent {
-  color: var(--accent);
+  color: var(--accent, var(--clr-accent-400));
 }
 
 /* general styling */
@@ -142,7 +147,7 @@ body {
   font-weight: var(--fw-700);
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  color: var(--neutral, var(--clr-accent-400));
+  color: var(--accent, var(--clr-accent-400));
   background: var(--clr-neutral-900);
 }
 
@@ -174,7 +179,7 @@ a {
   font-size: 1.125rem;
   color: inherit;
   padding: 0.75em 1.5em;
-  background-color: var(--neutral, var(--clr-accent-400));
+  background-color: var(--accent, var(--clr-accent-400));
   color: var(--clr-neutral-900);
 }
 
@@ -185,31 +190,35 @@ a {
 .testimonial {
   text-align: left;
   padding: 1.5em;
-}
-
-@media (min-width: 40em) {
-  .testimonial + .testimonial {
-    margin-left: 4rem;
-  }
+  --gap: calc(var(--spacer) * 4);
 }
 
 .testimonial .section-content {
   font-style: italic;
 }
 
-.testimonial::before {
+.corner-square {
+  position: relative;
+}
+
+.corner-square::before {
   content: "";
   display: block;
   position: absolute;
   width: 5rem;
   height: 5rem;
-  background-color: var(--accent, var(--fg));
+  background-color: var(--accent, var(--clr-accent-400));
   z-index: -1;
-  transform: translate(-2em, -2em);
+  left: -0.5rem;
+  top: -0.5rem;
 }
 
-.name {
-  color: var(--accent, var(--fg));
+.corner-square:nth-of-type(2n) {
+  --accent: var(--clr-neutral-900);
+}
+
+.testimonial .name {
+  color: var(--accent, var(--clr-neutral-900));
   font-weight: var(--fw-700);
 }
 
@@ -272,22 +281,6 @@ section {
   }
 }
 
-.join-now li {
-  background: var(--clr-neutral-100);
-  color: var(--clr-neutral-900);
-}
-
-.join-now li::before {
-  content: "";
-  display: block;
-  width: 5rem;
-  height: 5rem;
-  background: var(--bg, var(--clr-accent-400));
-  position: absolute;
-  z-index: -1;
-  transform: translate(-0.5rem, -0.5rem);
-}
-
 /* Specific Styling */
 
 .hero .section-header {
@@ -295,13 +288,14 @@ section {
 }
 
 .cta {
+  background-image: var(--image);
   background-size: cover;
   text-align: center;
+  background-blend-mode: multiply;
 }
 
 .cta_1 {
-  /* --image: url(assets/cta-bg-1.jpg); */
-  --blend: url(assets/cta-bg-1.jpg), var(--bg);
+  --image: url(assets/cta-bg-1.jpg);
 }
 
 .cta_2 {
