--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Custom properties  */
+
 :root {
   --ff-sans: "IBM Plex Sans", sans-serif;
   --ff-serif: "IBM Plex Serif", serif;
@@ -26,4 +28,201 @@
   --clr-primary-400: #8ea8da;
 
   --br: 1rem;
+  --spacer: 1rem;
+  --spacer-large: 5rem;
+}
+
+@media (width > 600px) {
+  :root {
+    /* large screen font-sizes */
+    --fs-200: 0.75rem;
+    --fs-300: 1rem;
+    --fs-400: 1.25rem;
+    --fs-500: 1.75rem;
+    --fs-600: 2.125rem;
+    --fs-900: 4.25rem;
+  }
+}
+
+/* Reset  */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  border-radius: var(--br);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+ul[class],
+ol[class] {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+input[type] {
+  border: none;
+}
+
+/* General Styling  */
+
+body {
+  font-size: var(--fs-400);
+  font-weight: var(--fw-700);
+  font-family: var(--ff-serif);
+  margin: 1rem;
+  line-height: 1.3;
+}
+
+p + p {
+  margin-top: calc(var(--spacer) * 2);
+}
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  background: none;
+  border: none;
+  font-family: var(--ff-sans);
+  font-size: var(--fs-300);
+  font-weight: var(--fw-700);
+  color: var(--clr-neutral-900);
+  position: relative;
+  text-align: left;
+  margin-top: 1rem;
+}
+
+.btn::after {
+  content: ">";
+  position: absolute;
+  transform: translate(var(--spacer), -0.5px);
+  font-weight: var(--fw-300);
+}
+
+.btn:hover,
+.btn:focus {
+  opacity: 0.65;
+}
+
+label {
+  display: block;
+  font-family: var(--ff-sans);
+  color: var(--clr-neutral-900);
+  font-weight: var(--fw-700);
+  font-size: var(--fs-200);
+}
+
+input[type="text"],
+input[type="email"] {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  border-bottom: 1px solid var(--clr-neutral-300);
+  font-size: var(--fs-300);
+  color: var(--clr-neutral-300);
+}
+
+/* Utility classes  */
+
+.bg-primary-300 {
+  background: var(--clr-primary-300);
+  border-radius: var(--br);
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 2rem 1rem;
+}
+
+.split {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacer-large);
+}
+
+.flow-content > * + * {
+  margin-top: var(--gap, var(--spacer));
+}
+
+.flow-content--large > * + * {
+  margin-top: var(--gap, calc(var(--spacer) * 2));
+}
+
+.row {
+  display: flex;
+  gap: var(--spacer);
+}
+
+/* Specific Styling */
+
+.call-to-action {
+  --gap: var(--spacer-large);
+}
+
+.call-to-action .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.newsletter {
+  flex-direction: column;
+  --gap: calc(var(--spacer) * 0.8);
+  padding: 0 1rem;
+}
+
+.page-title {
+  font-size: var(--fs-900);
+  line-height: 1.1;
+  font-weight: var(--fw-400);
+}
+
+.page-intro {
+  font-size: var(--fs-600);
+  line-height: 1.1;
+  font-weight: var(--fw-400);
+}
+
+.section-title {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-400);
+  line-height: 1.2;
+}
+
+.section-subtitle {
+  font-size: var(--fs-600);
+  line-height: 1.2;
+}
+
+.about {
+  font-size: var(--fs-500);
+}
+
+.article-preview > h3 {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-400);
+}
+
+.article-preview > p {
+  font-size: var(--fs-500);
+}
+
+.article-info {
+  font-size: var(--fs-200);
+  font-weight: var(--fw-300);
 }
