--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   --spacer-large: 5rem;
 }
 
-@media (width > 600px) {
+@media (min-width: 600px) {
   :root {
     /* large screen font-sizes */
     --fs-200: 0.75rem;
@@ -54,6 +54,8 @@
 
 img {
   max-width: 100%;
+  height: auto;
+  object-fit: contain;
   border-radius: var(--br);
 }
 
@@ -75,8 +77,17 @@ ol[class] {
   list-style: none;
 }
 
+dd {
+  margin: 0;
+  list-style: none;
+}
+
 input[type] {
   border: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* General Styling  */
@@ -85,8 +96,10 @@ body {
   font-size: var(--fs-400);
   font-weight: var(--fw-700);
   font-family: var(--ff-serif);
-  margin: 1rem;
+  margin: 0.5rem;
+  padding-bottom: 4rem;
   line-height: 1.3;
+  position: relative;
 }
 
 p + p {
@@ -104,7 +117,7 @@ p + p {
   color: var(--clr-neutral-900);
   position: relative;
   text-align: left;
-  margin-top: 1rem;
+  margin-top: var(--space, var(--spacer));
 }
 
 .btn::after {
@@ -153,7 +166,13 @@ input[type="email"] {
 .split {
   display: flex;
   flex-direction: column;
-  gap: var(--spacer-large);
+  gap: var(--space, var(--spacer-large));
+}
+
+@media (min-width: 600px) {
+  .split {
+    flex-direction: row;
+  }
 }
 
 .flow-content > * + * {
@@ -166,10 +185,58 @@ input[type="email"] {
 
 .row {
   display: flex;
-  gap: var(--spacer);
+  gap: var(--space, var(--spacer));
+}
+
+.recent-articles .row {
+  flex-direction: column;
 }
 
 /* Specific Styling */
+
+.primary-header__inner {
+  background-image: url(./img/hero.jpg);
+  background-size: cover;
+  border-radius: var(--br);
+  background-position: center;
+  background-size: auto;
+  height: 456px;
+  padding: calc(var(--spacer) * 0.5) var(--spacer);
+}
+
+.primary-nav {
+  background-color: var(--clr-neutral-900);
+  border-radius: var(--br);
+  padding: 1rem 3rem;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1000;
+}
+
+.primary-nav__list {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.primary-nav__list > * + *::after {
+  content: "|";
+  color: var(--clr-neutral-400);
+  position: absolute;
+  right: 45%;
+  opacity: 0.5;
+}
+
+.primary-nav__list a {
+  color: var(--clr-neutral-100);
+}
+
+.primary-nav__list a:hover,
+.primary-nav__list a:focus {
+  color: var(--clr-neutral-300);
+}
 
 .call-to-action {
   --gap: var(--spacer-large);
@@ -183,7 +250,7 @@ input[type="email"] {
 .newsletter {
   flex-direction: column;
   --gap: calc(var(--spacer) * 0.8);
-  padding: 0 1rem;
+  padding: calc(var(--spacer) * 0.5) var(--spacer);
 }
 
 .page-title {
@@ -225,4 +292,45 @@ input[type="email"] {
 .article-info {
   font-size: var(--fs-200);
   font-weight: var(--fw-300);
+}
+
+.primary-footer {
+  padding: 0 1rem;
+}
+
+.primary-footer .split {
+  --space: calc(var(--spacer) * 2);
+  margin-top: var(--spacer);
+  padding: calc(var(--spacer) * 2) 0;
+  border-top: 1px solid var(--clr-neutral-200);
+}
+
+.primary-footer__inner {
+}
+
+.footer-social {
+  display: flex;
+  gap: calc(var(--spacer) * 2);
+}
+
+.footer-social a {
+  color: var(--clr-neutral-500);
+  font-size: var(--fs-300);
+  /* font-weight: var(--fw-700); */
+}
+
+.copywrite {
+  order: 2;
+  font-size: var(--fs-300);
+  color: var(--clr-neutral-400);
+}
+
+.primary-footer dl {
+  --space: calc(var(--spacer) * 1.5);
+  color: var(--clr-neutral-400);
+  font-weight: var(--fw-700);
+}
+
+.primary-footer .btn::after {
+  content: "";
 }
