--- a/style.css
+++ b/style.css
@@ -65,7 +65,9 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+dd,
+figure {
   margin: 0;
   padding: 0;
 }
@@ -73,11 +75,6 @@ p {
 ul[class],
 ol[class] {
   padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-dd {
   margin: 0;
   list-style: none;
 }
