--- a/style.css
+++ b/style.css
@@ -28,16 +28,13 @@
   --clr-primary-400: #8ea8da;
 
   --br: 1rem;
-  --spacer: 1rem;
+  --spacer: 1em;
   --spacer-large: 5rem;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 40em) {
   :root {
     /* large screen font-sizes */
-    --fs-200: 0.75rem;
-    --fs-300: 1rem;
-    --fs-400: 1.25rem;
     --fs-500: 1.75rem;
     --fs-600: 2.125rem;
     --fs-900: 4.25rem;
@@ -59,6 +56,7 @@ img {
   border-radius: var(--br);
 }
 
+body,
 h1,
 h2,
 h3,
@@ -69,42 +67,140 @@ p,
 dd,
 figure {
   margin: 0;
-  padding: 0;
 }
 
-ul[class],
-ol[class] {
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1;
+}
+
+ul,
+ol,
+dl {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-input[type] {
-  border: none;
-}
-
-a {
-  text-decoration: none;
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
 /* General Styling  */
 
 body {
   font-size: var(--fs-400);
-  font-weight: var(--fw-700);
-  font-family: var(--ff-serif);
-  margin: 0.5rem;
-  padding-bottom: 4rem;
+  font-weight: var(--fw-400);
+  font-family: var(--ff-sans);
   line-height: 1.3;
+  padding: 1rem 1rem 6rem 1rem;
   position: relative;
 }
 
-p + p {
-  margin-top: calc(var(--spacer) * 2);
+/* Typography */
+
+h1,
+h2,
+h3,
+.text-serif {
+  font-family: var(--ff-serif);
+  font-weight: var(--fw-200);
+}
+
+.text-500 {
+  font-size: var(--fs-500);
+}
+
+.page-title {
+  font-size: var(--fs-900);
+  line-height: 1.1;
+}
+
+.page-intro {
+  font-size: var(--fs-600);
+  line-height: 1.1;
+}
+
+.section-title {
+  font-size: var(--fs-600);
+  color: var(--clr-neutral-400);
+  line-height: 1.2;
+}
+
+.section-subtitle {
+  font-size: var(--fs-600);
+  line-height: 1.2;
+}
+
+.article-preview > h3 {
+  font-size: var(--fs-500);
+}
+
+.article-preview .article-info {
+  display: flex;
+  gap: 2em;
+  font-size: var(--fs-200);
+  font-weight: var(--fw-400);
+  color: var(--clr-neutral-400);
+}
+
+.article-preview .article-info > *:first-child {
+  margin-right: 2rem;
+}
+
+/* General layout */
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+section {
+  padding: 2.5em 0;
+}
+
+@media (min-width: 40em) {
+  section {
+    padding: 3.5em 0;
+  }
+}
+
+.split {
+  display: flex;
+  flex-direction: column;
+}
+
+.split > * {
+  width: 100%;
+}
+
+.split > * + * {
+  margin: 4rem 0 0 0;
+}
+
+@media (min-width: 40em) {
+  .split {
+    flex-direction: row;
+  }
+
+  .split > * + * {
+    margin: 0 0 0 2rem;
+  }
+}
+
+.flow-content > * + * {
+  margin-top: var(--flow-spacer, var(--spacer));
 }
 
 .btn {
   display: inline-block;
+  cursor: pointer;
   text-decoration: none;
   background: none;
   border: none;
@@ -118,78 +214,34 @@ p + p {
 
 .btn:hover,
 .btn:focus {
+  color: var(--clr-primary-400);
   opacity: 0.65;
 }
 
-.btn-secondary {
-  margin-top: var(--space, var(--spacer));
-}
-
 .btn-secondary::after {
-  content: ">";
-  position: absolute;
-  transform: translate(var(--spacer), -0.5px);
+  content: "\203A";
+  margin-left: 0.5rem;
   font-weight: var(--fw-300);
-}
-
-label {
-  display: block;
-  font-family: var(--ff-sans);
-  color: var(--clr-neutral-900);
-  font-weight: var(--fw-700);
-  font-size: var(--fs-200);
-}
-
-input[type="text"],
-input[type="email"] {
-  display: block;
-  width: 100%;
-  padding: 0.5rem;
-  border-bottom: 1px solid var(--clr-neutral-300);
-  font-size: var(--fs-300);
-  color: var(--clr-neutral-300);
 }
 
 /* Utility classes  */
 
 .bg-primary-300 {
-  background: var(--clr-primary-300);
+  background-color: var(--clr-primary-300);
   border-radius: var(--br);
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 2rem 1rem;
-}
-
-.split {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space, var(--spacer-large));
-}
-
-@media (min-width: 600px) {
-  .split {
-    flex-direction: row;
-    --space: var(--spacer);
-  }
-}
-
-.flow-content > * + * {
-  margin-top: var(--gap, var(--spacer));
-}
-
-.flow-content--large > * + * {
-  margin-top: var(--gap, calc(var(--spacer) * 2));
-}
-
-.row {
-  display: flex;
-  gap: var(--space, var(--spacer));
+.xl-large {
+  margin-top: 5rem;
 }
 
 /* Specific Styling */
+
+.intro {
+  --flow-spacer: 2em;
+}
 
 .primary-header__inner {
   background-image: url(./img/hero.jpg);
@@ -201,7 +253,7 @@ input[type="email"] {
   padding: calc(var(--spacer) * 0.5) var(--spacer);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 40em) {
   .primary-header__inner {
     padding: calc(var(--spacer) * 2);
   }
@@ -214,11 +266,11 @@ input[type="email"] {
 .primary-nav {
   background-color: var(--clr-neutral-900);
   border-radius: var(--br);
-  padding: 1rem 3rem;
-  position: absolute;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  padding: 1rem calc(2rem + 10vw);
+  position: fixed;
+  right: 1rem;
+  left: 1rem;
+  bottom: 0.5rem;
   z-index: 1000;
 }
 
@@ -228,118 +280,121 @@ input[type="email"] {
   justify-content: space-between;
 }
 
-.primary-nav__list > * + *::after {
+.primary-nav__list::after {
   content: "|";
   color: var(--clr-neutral-400);
   position: absolute;
-  right: 45%;
+  right: 50%;
+  padding: 0;
+  margin: 0;
   opacity: 0.5;
 }
 
-.recent-articles .row {
+@media (min-width: 40em) {
+  .primary-nav__list::after {
+    content: "";
+  }
+}
+
+.call-to-action form {
+  display: flex;
   flex-direction: column;
+  gap: 2rem;
 }
 
-.call-to-action {
-  --gap: var(--spacer-large);
+@media (min-width: 40em) {
+  .call-to-action form {
+    flex-direction: row;
+  }
 }
 
-.call-to-action .container {
-  padding-left: 0;
-  padding-right: 0;
+.call-to-action form > div {
+  flex-basis: 100%;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.call-to-action label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: var(--fw-400);
+  font-size: var(--fs-300);
+}
+
+.call-to-action input {
+  display: block;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid var(--clr-neutral-300);
+  color: var(--clr-neutral-300);
+}
+
+.call-to-action input:focus {
+  border-color: var(--clr-primary-400);
+  border-width: 4px;
+}
+
+.call-to-action input::placeholder {
+  color: var(--clr-neutral-300);
+  opacity: 1;
 }
 
 .newsletter {
-  flex-direction: column;
-  --gap: calc(var(--spacer) * 0.8);
   padding: calc(var(--spacer) * 0.5) var(--spacer);
 }
 
-.page-title {
-  font-size: var(--fs-900);
-  line-height: 1.1;
-  font-weight: var(--fw-400);
+.footer {
+  padding-bottom: 1em;
 }
 
-.page-intro {
-  font-size: var(--fs-600);
-  line-height: 1.1;
-  font-weight: var(--fw-400);
+.primary-footer__inner {
+  --border: 4px solid var(--clr-neutral-200);
+  flex-direction: row;
+  border-bottom: var(--border);
+  border-top: var(--border);
+  padding: 3em 0;
+  margin-bottom: 2em;
 }
 
-.section-title {
-  font-size: var(--fs-600);
-  font-weight: var(--fw-400);
-  line-height: 1.2;
+.footer-nav {
+  display: flex;
+  margin: 0;
 }
 
-.section-subtitle {
-  font-size: var(--fs-600);
-  line-height: 1.2;
-}
-
-.about {
-  font-size: var(--fs-500);
-}
-
-.article-preview > h3 {
-  font-size: var(--fs-600);
-  font-weight: var(--fw-400);
-}
-
-.article-preview > p {
-  font-size: var(--fs-500);
-}
-
-.article-info {
-  font-size: var(--fs-200);
-  font-weight: var(--fw-300);
-}
-
-.primary-footer {
-  padding: 0 1rem;
-}
-
-.primary-footer .split {
-  --space: calc(var(--spacer) * 2);
-  margin-top: var(--spacer);
-  padding: calc(var(--spacer) * 2) 0;
-  border-top: 1px solid var(--clr-neutral-200);
+.footer-nav > *:first-child {
+  margin-right: 4em;
 }
 
 .footer-social {
   display: flex;
-  gap: calc(var(--spacer) * 2);
+  gap: 2em;
 }
 
 .footer-social a {
   color: var(--clr-neutral-500);
   font-size: var(--fs-300);
-  /* font-weight: var(--fw-700); */
+}
+
+.primary-footer__outer {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.primary-footer__outer > * {
+  width: 100%;
+}
+
+.primary-footer__outer > * + * {
+  margin: 0 0 3rem 0;
 }
 
 .copywrite {
-  order: 2;
   font-size: var(--fs-300);
   color: var(--clr-neutral-400);
   transform: translateY(0.2rem);
 }
 
-dd {
-  margin-top: 0.5rem;
-}
-
-.primary-footer dl {
-  --space: calc(var(--spacer) * 1.5);
-  color: var(--clr-neutral-400);
-  font-weight: var(--fw-700);
-}
-
-.primary-footer .btn::after {
-  content: "";
-}
-
-@media (min-width: 600px) {
+@media (min-width: 40em) {
   body {
     margin: 1rem;
     padding: 0;
@@ -368,52 +423,21 @@ dd {
   }
 
   .article-preview > img {
-    height: 256px;
-    object-position: center;
+    width: 100%;
+    height: 12.5rem;
     object-fit: cover;
   }
 
-  .article-preview .row {
+  .primary-footer__outer {
     flex-direction: row;
   }
 
-  .newsletter.row {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .newsletter.row > div {
-    flex-grow: 1;
-  }
-
-  .newsletter.row > button {
-    transform: translateX(-0.5rem);
-  }
-
-  .primary-footer__inner .split {
-    justify-content: space-around;
-  }
-
-  .primary-footer__inner dl {
-    flex-grow: 0.5;
-    margin-top: 0;
-  }
-
-  .primary-footer__inner a {
-    flex-grow: 2;
-  }
-
-  .footer-social {
-    order: 2;
-    flex-grow: 0.5;
-  }
-
-  .copywrite {
-    flex-grow: 1;
+  .primary-footer__outer > * + * {
+    margin: 0;
   }
 }
 
-@media (max-width: 599px) {
+@media (max-width: 40em) {
   .primary-nav__list a {
     color: var(--clr-neutral-100);
   }
