--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   --fw-200: 200;
   --fw-300: 300;
   --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
   --fw-700: 700;
 
   --clr-neutral-100: #fff;
@@ -121,6 +123,10 @@ h3,
   line-height: 1.1;
 }
 
+.primary-header .page-title {
+  font-weight: var(--fw-600);
+}
+
 .page-intro {
   font-size: var(--fs-600);
   line-height: 1.1;
@@ -208,20 +214,27 @@ section {
   font-size: var(--fs-300);
   font-weight: var(--fw-700);
   color: var(--clr-neutral-900);
-  position: relative;
+  /* position: relative; */
   text-align: left;
+  padding: 0 0.5rem;
 }
 
 .btn:hover,
 .btn:focus {
+  background-color: var(--clr-neutral-100);
+  border-radius: var(--br);
+  padding: 0.2rem 0.5rem;
   color: var(--clr-primary-400);
   opacity: 0.65;
+  transition: opacity ease-out 500ms;
+  transition: padding ease-in 250ms;
 }
 
 .btn-secondary::after {
   content: "\203A";
   margin-left: 0.5rem;
   font-weight: var(--fw-300);
+  /* transform: translateY(8px); */
 }
 
 /* Utility classes  */
@@ -243,24 +256,38 @@ section {
   --flow-spacer: 2em;
 }
 
-.primary-header__inner {
-  background-image: url(./img/hero.jpg);
+.primary-header {
+  background-image: var(--url);
   background-size: cover;
   border-radius: var(--br);
-  background-position: center;
+  background-position: var(--bg-pos, center);
   background-size: auto;
-  height: 456px;
-  padding: calc(var(--spacer) * 0.5) var(--spacer);
+  height: var(--bg-height);
+  padding: var(--spacer);
+}
+
+.bg-home {
+  --url: url(./img/hero.jpg);
+  --bg-pos: center;
+  --bg-height: 456px;
+}
+
+.bg-blog {
+  --url: url(./img/blog.jpg);
+  --bg-pos: 76%;
+  --bg-height: 1080px;
 }
 
 @media (min-width: 40em) {
-  .primary-header__inner {
-    padding: calc(var(--spacer) * 2);
+  .bg-blog {
+    --bg-height: 800px;
   }
+}
 
-  .primary-nav {
-    position: static;
-  }
+.bg-story {
+  --url: url(./img/blog.jpg);
+  --bg-pos: 76%;
+  --bg-height: 1080px;
 }
 
 .primary-nav {
@@ -272,6 +299,29 @@ section {
   left: 1rem;
   bottom: 0.5rem;
   z-index: 1000;
+}
+
+.primary-header {
+  position: relative;
+}
+
+.primary-header .container {
+  position: relative;
+  top: 20%;
+}
+
+@media (min-width: 40em) {
+  .primary-header {
+    padding: calc(var(--spacer) * 2);
+  }
+
+  .primary-nav {
+    position: static;
+  }
+
+  .primary-header > .container {
+    top: 15%;
+  }
 }
 
 .primary-nav__list {
@@ -294,6 +344,56 @@ section {
   .primary-nav__list::after {
     content: "";
   }
+}
+
+.secondary-navigation {
+  display: none;
+}
+
+@media (min-width: 40em) {
+  .secondary-navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
+    padding: 1.5em 0;
+  }
+
+  .categories {
+    display: flex;
+    gap: calc(0.5em + 2vw);
+  }
+
+  .article-grid.split {
+    flex-direction: column;
+  }
+
+  .article-grid.split > * + * {
+    margin: 0;
+    margin-top: 4rem;
+  }
+
+  .article-grid > .article-preview:first-of-type {
+    display: flex;
+    gap: 2rem;
+  }
+
+  .article-grid > .article-preview:first-of-type > * {
+    width: 100%;
+    /* margin-top: 0; */
+  }
+
+  .article-grid > .article-preview:first-of-type > *:nth-child(2) {
+    margin-top: 0;
+    align-self: center;
+  }
+}
+
+.more-stories {
+  padding: 2rem 0;
+  text-align: center;
+  border-top: 4px solid var(--clr-neutral-200);
+  border-bottom: 4px solid var(--clr-neutral-200);
 }
 
 .call-to-action form {
@@ -349,7 +449,7 @@ section {
 
 .primary-footer__inner {
   --border: 4px solid var(--clr-neutral-200);
-  flex-direction: row;
+  /* flex-direction: row; */
   border-bottom: var(--border);
   border-top: var(--border);
   padding: 3em 0;
@@ -358,11 +458,23 @@ section {
 
 .footer-nav {
   display: flex;
-  margin: 0;
+  flex-direction: column;
+  /* margin: 0; */
 }
 
 .footer-nav > *:first-child {
-  margin-right: 4em;
+  margin-bottom: 4em;
+}
+
+@media (min-width: 40em) {
+  .footer-nav {
+    flex-direction: row;
+  }
+
+  .footer-nav > *:first-child {
+    margin: 0;
+    margin-right: 4em;
+  }
 }
 
 .footer-social {
@@ -394,6 +506,17 @@ section {
   transform: translateY(0.2rem);
 }
 
+.article-grid {
+  padding-top: 2.5em;
+  padding-bottom: 2.5em;
+}
+
+@media (min-width: 40em) {
+  .article-grid {
+    padding-top: 1em;
+  }
+}
+
 @media (min-width: 40em) {
   body {
     margin: 1rem;
@@ -404,7 +527,6 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    padding: calc(var(--spacer) * 2);
   }
 
   .primary-nav {
